Name: data-endian
Version: 0.1.1
Category: Data
Stability: experimental
Synopsis: Endian-sensitive data
Description:
  This package provides helpers for converting endian-sensitive data.

Homepage: https://github.com/mvv/data-endian
Bug-Reports: https://github.com/mvv/data-endian/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2011-2016 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Extra-Source-Files:
  README.md

Tested-With: GHC==7.0.4, GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8.4,
             GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.1

Cabal-Version: >= 1.6.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-endian.git

Library
  Build-Depends: base >= 4 && < 5
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.Endian
